// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not render "show less" 1`] = `
<div
  className="note spacer-top spacer-bottom text-center"
>
  x_show.15
</div>
`;

exports[`should not render "show more" 1`] = `
<div
  className="note spacer-top spacer-bottom text-center"
>
  x_show.3
</div>
`;

exports[`should show less 1`] = `
<div
  className="note spacer-top spacer-bottom text-center"
>
  x_show.15
  <ButtonLink
    className="spacer-left"
    onClick={[Function]}
  >
    show_less
  </ButtonLink>
</div>
`;

exports[`should show more 1`] = `
<div
  className="note spacer-top spacer-bottom text-center"
>
  x_show.3
  <ButtonLink
    className="spacer-left"
    onClick={[Function]}
  >
    show_more
  </ButtonLink>
</div>
`;
